[package]
name = "formula_y"
version = "0.1.0"
edition = "2021"
autotest = false

[lib]
proc-macro = true

[[bin]]
name = "derived_form"
path = "src/bin.rs"

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
convert_case = "0.5.0"
gloo = "0.8.0"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["extra-traits"] }
wasm-bindgen = "^0.2.37"
web-sys = { version="0.3.59", features=["HtmlInputElement"]}
yew = "0.19"
yew-router = "0.16.0"
