[package]
name = "formula_y"
version = "0.1.0"
edition = "2021"
autotest = false

[lib]
proc-macro = true

[[example]]
name = "basic_form" 

[dev-dependencies]
wasm-bindgen = "0.2.78"
web-sys = { version="^0.3.0", features=["HtmlInputElement"]}
yew = "0.19"
yew-router = "0.16.0"
gloo = "0.8.0"

[dependencies]
convert_case = "0.5.0"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["extra-traits"] }

