[package]
name = "usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formula_y = { version = "0.1.0", path = "../"}
wasm-bindgen = { version = "0.2.78" }
web-sys = { version="^0.3.0", features=["HtmlInputElement"] }
yew = { version = "0.19" }
yew-router = { version = "0.16.0" }
gloo = { version = "0.8.0" }